# qwanqwa

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  notes.md  pyproject.toml
case-studies/: demo-from-video.ipynb
case-studies/hugginface-audit/: analyze.py
case-studies/huggingface-audit/: README.md  analyze.py
case-studies/identifier-coverage/: plot.py
case-studies/latex-tables/: generate.py
case-studies/linking-datasets/: README.md  colexification_graph.py  concept_graph.py  link.py  link_concepts.py  merge_type_graphs.py  unresolved.txt
demo/: PUBLISHING.md  app.css  app.js  index.html
docs/: example.md  examples.md  sources.md
docs/licenses/: CC-BY-NC-ND-2.0-DE.txt
examples/: 01_basic_usage.py  02_identifiers.py  03_conversion.py  04_traversal.py  05_search.py  06_names.py  07_geographic.py  08_relations.py  09_advanced_queries.py  10_linking_datasets.py  11_normalizing_datasets.py
notebooks/: colex_analysis.ipynb
scripts/: build_and_test.py  compile_database.py  export_demo_data.py  publish_demo.py  release.py  test_dump.py
src/qq/: __init__.py  access.py  bcp47.py  cli.py  constants.py  data_model.py  gb.py  interface.py  language_data.py  linguameta.py  release.py
src/qq/compile/sources/: glotscript.py  glottolog.py  linguameta.py  pycountry.py  wikipedia.py
src/qq/explorer/: export.py  publish.py
src/qq/exporters/: __init__.py  cldf.py  context.py  demo.py  loading.py  name_cache.py  native.py  registry.py
src/qq/importers/: __init__.py  base_importer.py  external_resource_importer.py  glotscript_importer.py  glottolog_importer.py  iana_importer.py  linguameta_importer.py  loc_importer.py  pycountry_importer.py  sil_importer.py  unicode_importer.py  wikidata_importer.py  wikipedia_importer.py
src/qq/internal/: build_database.py  build_snapshot.py  data_store.py  entity_resolution.py  merge.py  merge_provenance.py  names_export.py  names_merge.py  storage.py  validation.py
src/qq/sources/: docs_generator.py  external_resource.py  providers.py  source_config.py  source_management.py  updater.py
tests/: __init__.py  conftest.py  test_bcp47.py  test_cldf_export.py  test_cli.py  test_data_store.py  test_demo_export.py  test_demo_publish.py  test_examples.py  test_exporters.py  test_external_resources.py  test_huggingface_source_provider.py  test_importers.py  test_languoid_access.py  test_merge.py  test_names_merge.py  test_source_config.py  test_source_management.py  test_storage.py  test_unicode_importer.py  test_updater.py  test_validation.py  test_wikidata_importer.py
tests/fixtures/glotscript/: GlotScript.tsv
tests/fixtures/glottolog/: classification.nex  languages.csv
tests/fixtures/iana/: language-subtag-registry
tests/fixtures/linguameta/: linguameta.tsv
tests/fixtures/linguameta/data/: frr.json  locales.json  nl.json  scripts.json
tests/fixtures/loc/: ISO-639-2_utf-8.txt
tests/fixtures/pycountry/: iso15924.json  iso3166-1.json  iso3166-2.json  iso3166-3.json  iso639-3.json  iso639-5.json
tests/fixtures/sil/: iso_639_3_retirements.tab
tests/fixtures/sil_iso6393/: iso-639-3.tab  iso_639_3_retirements.tab
tests/fixtures/wikipedia/: wikipedia.csv
