[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qq"
version = "0.3.1"
requires-python = ">= 3.10"
authors = [{ name = "Wessel Poelman", email = "contact@wesselpoelman.nl" }]
maintainers = [{ name = "Wessel Poelman", email = "contact@wesselpoelman.nl" }]
description = "A package to handle language metadata (QwanQwa)."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.1.1",
    "pandas>=2.2.2",
    "pydantic>=2.9.1",
    "typing_extensions>=4.12.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.4",
    "pre-commit>=4.0.1",
    "devtools>=0.12.2",
]

[project.urls]
"Homepage" = "https://github.com/WPoelman/qwanqwa"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
qq = ["data/db.json.gz"]

[tool.ruff]
line-length = 120
